--- a/build_production/index.html
+++ b/build_production/index.html
@@ -4,9 +4,9 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <script src="https://kit.fontawesome.com/06a1cee31e.js"></script>
         <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="/assets/build/css/dp-main.css?id=35626ccae36efd2524d8">
+        <link rel="stylesheet" href="/assets/build/css/fa/all.min.css">
+        <link rel="stylesheet" href="/assets/build/css/dp-main.css?id=484b130ceab293a04a04">
     </head>
     <body>
         <div class="container">
@@ -14,7 +14,7 @@
                 <div class="dp-hidden lg:dp-block dp-flex-1 dp-max-w-294px dp-mr-40px">
                     <div class="dp-fixed dp-w-full dp-max-w-294px dp-bg-gray-1 dp-h-screen"></div>
                 </div>
-                <div class="relative dp-flex-1 dp-max-w-868px dp-px-4 xl:dp-px-0 dp-py-8">
+                <div class="relative dp-flex-1 dp-max-w-868px xl:dp-px-0 dp-py-8">
                         <div>
         <a href="/naryste-neaktyvi">Narystė neaktyvi</a><br>
         <a href="/naryste-aktyvi">Narystė aktyvi</a>
@@ -22,6 +22,6 @@
                 </div>
             </div>
         </div>
-        <script src="/assets/build/js/main.js?id=1e40e9f3d45d61571c9e"></script>
+        <script src="/assets/build/js/main.js?id=31acf55c3d7469723c9c"></script>
     </body>
 </html>
