Page lesu-ismokejimas

--- a/build_production/naryste-aktyvi/index.html
+++ b/build_production/naryste-aktyvi/index.html
@@ -6,10 +6,10 @@
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="/assets/build/css/fa/all.min.css">
-        <link rel="stylesheet" href="/assets/build/css/dp-main.css?id=484b130ceab293a04a04">
+        <link rel="stylesheet" href="/assets/build/css/dp-main.css?id=d795933467963ab8098f">
     </head>
     <body>
-        <div class="container">
+        <div class="dp-container">
             <div class="lg:dp-flex lg:dp-flex-wrap">
                 <div class="dp-hidden lg:dp-block dp-flex-1 dp-max-w-294px dp-mr-40px">
                     <div class="dp-fixed dp-w-full dp-max-w-294px dp-bg-gray-1 dp-h-screen"></div>
@@ -548,6 +548,6 @@ Notice: Undefined variable: id in /Users/romas/Projects/Static/delfi-plius/cache
 </div>                </div>
             </div>
         </div>
-        <script src="/assets/build/js/main.js?id=31acf55c3d7469723c9c"></script>
+        <script src="/assets/build/js/main.js?id=8876bda4548df729dd24"></script>
     </body>
 </html>
