--- a/build_production/lesu-ismokejimas/index.html
+++ b/build_production/lesu-ismokejimas/index.html
@@ -6,7 +6,7 @@
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="/assets/build/css/fa/all.min.css">
-        <link rel="stylesheet" href="/assets/build/css/dp-main.css?id=d795933467963ab8098f">
+        <link rel="stylesheet" href="/assets/build/css/dp-main.css?id=0a259e05b06cd9b9f0a4">
     </head>
     <body>
         <div class="dp-container dp-relative dp-bg-gray-1">
@@ -95,6 +95,12 @@ Notice: Undefined variable: id in /Users/romas/Projects/Static/delfi-plius/cache
     </div>
             </div>
         </div>
+        <div class="dp-container dp-mt-4">
+            <div class="dp-bg-gray-1 dp-text-center dp-py-4 dp-px-4 lg:dp-px-0">
+    <div class="dp-text-16px lg:dp-text-18px">Tu pasirinkai:</div>
+    <div class="dp-text-18px lg:dp-text-20px dp-font-semibold">DELFI PLIUS prenumerata, pirmas mėnuo – 1€ </div>
+    <div class="dp-text-16px lg:dp-text-18px">po to – 5€/mėn.</div>
+</div>        </div>
         <script src="/assets/build/js/main.js?id=8876bda4548df729dd24"></script>
     </body>
 </html>
