--- a/build_production/apmokejimo-forma/index.html
+++ b/build_production/apmokejimo-forma/index.html
@@ -6,7 +6,7 @@
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="/assets/build/css/fa/all.min.css">
-        <link rel="stylesheet" href="/assets/build/css/dp-main.css?id=0a259e05b06cd9b9f0a4">
+        <link rel="stylesheet" href="/assets/build/css/dp-main.css?id=91e680c023e74ae5deb3">
     </head>
     <body>
         <div class="dp-container dp-relative dp-bg-gray-1">
@@ -35,9 +35,9 @@
                 </div>
             </div>
             <div class="dp-container-inner">
-                    <div class="dp-flex dp-flex-col lg:dp-flex-row dp-px-4">
-        <label class="dp-mb-1 lg:dp-mb-0 dp-flex-1 dp-cursor-pointer dp-border dp-border-gray-9 lg:dp-rounded-l-5px dp-bg-white dp-py-3 dp-text-center dp-text-18px" for="dp_payment_cc">Banko kortele</label>
-        <label class="dp-flex-1 dp-cursor-pointer dp-border dp-border-gray-9 lg:dp-rounded-r-5px dp-bg-white dp-py-3 dp-text-center dp-text-18px" for="dp_payment_sms">SMS žinute</label>
+                    <div class="dp-flex dp-flex-col lg:dp-flex-row dp-px-4 lg:dp-px-0">
+        <label class="dp_payment_type dp-bg-gray-3 dp-mb-1 lg:dp-mb-0 dp-flex-1 dp-cursor-pointer dp-border dp-border-gray-9 lg:dp-rounded-l-5px dp-bg-white dp-py-3 dp-text-center dp-text-18px" for="dp_payment_cc">Banko kortele</label>
+        <label class="dp_payment_type dp-flex-1 dp-cursor-pointer dp-border dp-border-gray-9 lg:dp-rounded-r-5px dp-bg-white dp-py-3 dp-text-center dp-text-18px" for="dp_payment_sms">SMS žinute</label>
     </div>
     <div class="dp-mt-8">
         <input name="payment_type" type="radio" id="dp_payment_cc" class="dp-tab-trigger dp-absolute dp-invisible" checked>
@@ -150,6 +150,6 @@ Notice: Undefined variable: id in /Users/romas/Projects/Static/delfi-plius/cache
     <div class="dp-text-18px lg:dp-text-20px dp-font-semibold">DELFI PLIUS prenumerata, pirmas mėnuo – 1€ </div>
     <div class="dp-text-16px lg:dp-text-18px">po to – 5€/mėn.</div>
 </div>        </div>
-        <script src="/assets/build/js/main.js?id=8876bda4548df729dd24"></script>
+        <script src="/assets/build/js/main.js?id=aef0178de8881305eb46"></script>
     </body>
 </html>
