--- a/build_production/index.html
+++ b/build_production/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="/assets/build/css/dp-main.css?id=0a259e05b06cd9b9f0a4">
+        <link rel="stylesheet" href="/assets/build/css/dp-main.css?id=91e680c023e74ae5deb3">
         <style>
         body,
         html {
@@ -20,6 +20,7 @@
         <a href="/naryste-aktyvi">Narystė aktyvi</a>
         <a href="/lesu-ismokejimas">Lėšų išmokėjimo forma</a>
         <a href="/apmokejimo-forma">Apmokėjimo forma</a>
+        <a href="/apmokejimo-budai">Apmokėjimo būdai</a>
     </div>
         </div>
     </body>
