Mokamas turinys cloak

--- a/build_production/index.html
+++ b/build_production/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="lt">
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="/assets/build/css/dp-main.css?id=91e680c023e74ae5deb3">
+        <link rel="stylesheet" href="/assets/build/css/dp-main.css?id=f9770edd9905eea1b749">
         <style>
         body,
         html {
@@ -21,6 +21,7 @@
         <a href="/lesu-ismokejimas">Lėšų išmokėjimo forma</a>
         <a href="/apmokejimo-forma">Apmokėjimo forma</a>
         <a href="/apmokejimo-budai">Apmokėjimo būdai</a>
+        <a href="/mokamas-turinys">Mokamas turinys (cloak)</a>
     </div>
         </div>
     </body>
